# tdd-for-embedded-c

./: meson.build
include/: circular_buffer.h  led_driver.h  runtime_error.h  runtime_error_stub.h
src/: circular_buffer.c  led_driver.c  meson.build  runtime_error_stub.c
test/: circular_buffer_test.c  led_driver_test.c  meson.build
